--- a/MainLayout.razor
+++ b/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>BlazorMicah</PageTitle>
+<PageTitle>Blazor Practive#1</PageTitle>
 
 <div class="page">
     <div class="sidebar">
